syntax = "proto3";

option go_package = "github.com/momentohq/client-sdk-go;client_sdk_go";
option java_multiple_files = true;
option java_package = "grpc.cache_client";

package cache_client;


enum ECacheResult {
  Invalid = 0;
  Ok = 1;
  Hit = 2;
  Miss = 3;

  reserved 4 to 6;
}


service Scs {
  rpc Get (_GetRequest) returns (_GetResponse) {}
  rpc Set (_SetRequest) returns (_SetResponse) {}
  rpc Delete (_DeleteRequest) returns (_DeleteResponse) {}
  rpc DictionaryGet (_DictionaryGetRequest) returns (_DictionaryGetResponse) {}
  rpc DictionaryGetAll (_DictionaryGetAllRequest) returns (_DictionaryGetAllResponse) {}
  rpc DictionarySet (_DictionarySetRequest) returns (_DictionarySetResponse) {}
}


message _GetRequest {
  bytes cache_key = 1;
}

message _GetResponse {
  ECacheResult result = 1;
  bytes cache_body = 2;
  string message = 3;
}

message _DeleteRequest {
  bytes cache_key = 1;
}

message _DeleteResponse {}

message _SetRequest {
  bytes cache_key = 1;
  bytes cache_body = 2;
  uint64 ttl_milliseconds = 3;
}

message _SetResponse {
  ECacheResult result = 1;
  string message = 2;
}

message _DictionaryGetRequest {
  bytes dictionary_name = 1;
  repeated bytes dictionary_keys = 2;
}

message _DictionaryGetResponse {
  message _DictionaryGetResponsePart {
    ECacheResult result = 1;
    bytes cache_body = 2;
  }
  repeated _DictionaryGetResponsePart dictionary_body = 1;
  string message = 2;
}

message _DictionaryGetAllRequest {
  bytes dictionary_name = 1;
}

message _DictionaryKeyValuePair {
  bytes key = 1;
  bytes value = 2;
}

message _DictionaryGetAllResponse {
  ECacheResult result = 1;
  repeated _DictionaryKeyValuePair dictionary_body = 2;
  string message = 3;
}

message _DictionarySetRequest {
  bytes dictionary_name = 1;
  repeated _DictionaryKeyValuePair dictionary_body = 2;
}

message _DictionarySetResponse {
  ECacheResult result = 1;
  string message = 2;
}